fix(theme-default): fix code overflow-wrap in Safari (close #435)

--- a/packages/@vuepress/theme-default/src/client/styles/code.scss
+++ b/packages/@vuepress/theme-default/src/client/styles/code.scss
@@ -135,6 +135,7 @@ pre[class*='language-'] {
       padding: 0;
       background-color: transparent;
       border-radius: 0;
+      overflow-wrap: unset;
       -webkit-font-smoothing: auto;
       -moz-osx-font-smoothing: auto;
     }
